WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250334
REGRESSION(
258522@main
): Ensure the slider style is applied to an <input> element before drawing
https://bugs.webkit.org/show_bug.cgi?id=250334
Summary
REGRESSION(258522@main): Ensure the slider style is applied to an <input> ele...
Said Abou-Hallawa
Reported
2023-01-09 12:13:48 PST
The appearance style can be applied to any non <input> element like this this one: <style> html { appearance: slider-vertical; } </style> In
258522@main
createSliderTrackPartForRenderer() was refactored from RenderTheme::paintSliderTicks() which makes an early return "if (!is<HTMLInputElement>(o.node()))". We need to port this check to createSliderTrackPartForRenderer().
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2023-01-09 12:14:19 PST
rdar://104019874
Said Abou-Hallawa
Comment 2
2023-01-09 12:19:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8411
EWS
Comment 3
2023-01-09 14:35:15 PST
Committed
258684@main
(c14ea6ce8716): <
https://commits.webkit.org/258684@main
> Reviewed commits have been landed. Closing PR #8411 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug