REGRESSION(258522@main): Ensure the slider style is applied to an <input> element before drawing https://bugs.webkit.org/show_bug.cgi?id=250334 rdar://104019874

Reviewed by Aditya Keerthi.

The appearance style can be applied to any non <input> element. In 258522@main,
createSliderTrackPartForRenderer() was refactored from RenderTheme::paintSliderTicks()
which makes an early return "if (!is<HTMLInputElement>(o.node()))". We need to
port this check to createSliderTrackPartForRenderer().

* LayoutTests/fast/forms/slider-track-not-input-element-expected.txt: Added.
* LayoutTests/fast/forms/slider-track-not-input-element.html: Added.
* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::createSliderTrackPartForRenderer):

Canonical link: https://commits.webkit.org/258684@main