Source/WebCore/rendering/RenderTheme.cpp
@@ -507,18 +507,21 @@ static RefPtr<ControlPart> createSliderTrackPartForRenderer(const RenderObject& 
     if (type != ControlPartType::SliderHorizontal && type != ControlPartType::SliderVertical)
         return nullptr;
 
-    auto& input = downcast<HTMLInputElement>(*renderer.node());
-    if (!input.isRangeControl())
+    auto* input = dynamicDowncast<HTMLInputElement>(*renderer.node());
+    if (!input)
+        return nullptr;
+
+    if (!input->isRangeControl())
         return nullptr;
 
     IntSize thumbSize;
-    if (const auto* thumbRenderer = input.sliderThumbElement()->renderer()) {
+    if (const auto* thumbRenderer = input->sliderThumbElement()->renderer()) {
         const auto& thumbStyle = thumbRenderer->style();
         thumbSize = IntSize { thumbStyle.width().intValue(), thumbStyle.height().intValue() };
     }
 
     IntRect trackBounds;
-    if (const auto* trackRenderer = input.sliderTrackElement()->renderer()) {
+    if (const auto* trackRenderer = input->sliderTrackElement()->renderer()) {
         trackBounds = trackRenderer->absoluteBoundingBoxRectIgnoringTransforms();
         
         // We can ignoring transforms because transform is handled by the graphics context.
@@ -530,12 +533,12 @@ static RefPtr<ControlPart> createSliderTrackPartForRenderer(const RenderObject& 
 
     Vector<double> tickRatios;
 #if ENABLE(DATALIST_ELEMENT)
-    if (auto dataList = input.dataList()) {
-        double minimum = input.minimum();
-        double maximum = input.maximum();
+    if (auto dataList = input->dataList()) {
+        double minimum = input->minimum();
+        double maximum = input->maximum();
 
         for (auto& optionElement : dataList->suggestions()) {
-            auto optionValue = input.listOptionValueAsDouble(optionElement);
+            auto optionValue = input->listOptionValueAsDouble(optionElement);
             if (!optionValue)
                 continue;
             double tickRatio = (*optionValue - minimum) / (maximum - minimum);
